--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "next": "12.1.6",
     "nookies": "^2.5.2",
     "react": "18.1.0",
-    "react-dom": "18.1.0"
+    "react-dom": "18.1.0",
+    "react-modal": "^3.16.1"
   },
   "devDependencies": {
     "@types/cookie": "^0.5.1",
