--- a/package.json
+++ b/package.json
@@ -9,19 +9,26 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@chakra-ui/react": "^2.8.1",
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "@hookform/resolvers": "^3.3.1",
     "axios": "^0.27.2",
     "jwt-decode": "^3.1.2",
     "next": "12.1.6",
     "nookies": "^2.5.2",
     "react": "18.1.0",
     "react-dom": "18.1.0",
-    "react-modal": "^3.16.1"
+    "react-hook-form": "^7.46.2",
+    "react-modal": "^3.16.1",
+    "zod": "^3.22.2"
   },
   "devDependencies": {
+    "@rocketseat/eslint-config": "^2.1.0",
     "@types/cookie": "^0.5.1",
     "@types/node": "^17.0.38",
     "@types/react": "^18.0.10",
-    "eslint": "8.16.0",
+    "eslint": "^8.16.0",
     "eslint-config-next": "12.1.6"
   }
 }
