--- a/package.json
+++ b/package.json
@@ -17,10 +17,12 @@
     "jwt-decode": "^3.1.2",
     "next": "12.1.6",
     "nookies": "^2.5.2",
+    "phosphor-react": "^1.4.1",
     "react": "18.1.0",
     "react-dom": "18.1.0",
     "react-hook-form": "^7.46.2",
     "react-modal": "^3.16.1",
+    "react-router-dom": "^6.16.0",
     "zod": "^3.22.2"
   },
   "devDependencies": {
